# rust-to-wasm-compiler

./: Cargo.toml
.github/workflows/: cargo-build-test.yml
src/: lib.rs
tests/: compiles_to_wasm.rs
