[package]
name = "rust-to-wasm-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo = "0.87.1"
thiserror = "2"
tempfile = "3.19"
dirs = "6.0"
sha256 = "1.6.0"

[dev-dependencies]
tempfile = "3.19"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wat = "1"
wasmtime = "32.0"
rayon = "1.10"
indoc = "2"
