[package]
name = "rust-to-wasm-compiler"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug-working-directory = []

[dependencies]
cargo = { version = "0.90.0" }
thiserror = { version = "2" }
tempfile = { version = "3.20" }
dirs = { version = "6.0" }
sha256 = { version = "1.6.0" }

[dev-dependencies]
tempfile = { version = "3.19" }
thiserror = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
wat = { version = "1" }
wasmtime = { version = "35.0" }
rayon = { version = "1.10" }
indoc = { version = "2" }
